--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -2,12 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -16,15 +15,10 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="435.0" prefWidth="741.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
       <BorderPane layoutX="371.0" layoutY="1.0" prefHeight="405.0" prefWidth="741.0" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0">
-         <center>
-            <MediaView fx:id="mediaView" fitHeight="300.0" fitWidth="700.0" BorderPane.alignment="CENTER" />
-         </center>
          <bottom>
             <VBox alignment="CENTER" prefHeight="95.0" prefWidth="741.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="lbNameOfSong" alignment="CENTER" text="Label" />
                   <Slider fx:id="timeSlider" majorTickUnit="20.0" prefHeight="29.0" prefWidth="749.0" showTickLabels="true">
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -54,22 +48,31 @@
                   <items>
                     <MenuItem fx:id="miOpen" mnemonicParsing="false" onAction="#openFile" text="Open" />
                         <MenuItem fx:id="miSave" mnemonicParsing="false" text="Save" />
-                        <MenuItem fx:id="miExit" mnemonicParsing="false" text="Exit" />
+                        <MenuItem fx:id="miExit" mnemonicParsing="false" onAction="#exitClick" text="Exit" />
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Tools">
                   <items>
-                    <MenuItem fx:id="miDelete" mnemonicParsing="false" text="Delete" />
+                    <MenuItem fx:id="miSpeed" mnemonicParsing="false" onAction="#speedClick" text="Set speed!" />
+                        <MenuItem fx:id="miBackground" mnemonicParsing="false" text="Change Background" />
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
                   <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
+                    <MenuItem fx:id="miAbout" mnemonicParsing="false" onAction="#aboutClick" text="About" />
                   </items>
                 </Menu>
               </menus>
             </MenuBar>
          </top>
+         <center>
+            <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <MediaView fx:id="mediaView" fitHeight="300.0" fitWidth="600.0" />
+                  <ListView prefHeight="334.0" prefWidth="240.0" />
+               </children>
+            </HBox>
+         </center>
       </BorderPane>
    </children>
 </AnchorPane>
