--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,29 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.media.MediaView?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="435.0" prefWidth="741.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#setKeyCombination" prefHeight="510.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <BorderPane layoutX="371.0" layoutY="1.0" prefHeight="405.0" prefWidth="741.0" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0">
          <bottom>
-            <VBox alignment="CENTER" prefHeight="95.0" prefWidth="741.0" BorderPane.alignment="CENTER">
+            <VBox prefHeight="95.0" prefWidth="741.0" BorderPane.alignment="CENTER">
                <children>
-                  <Slider fx:id="timeSlider" majorTickUnit="20.0" prefHeight="29.0" prefWidth="749.0" showTickLabels="true">
+                  <Slider fx:id="timeSlider" majorTickUnit="20.0" prefHeight="29.0" prefWidth="749.0">
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
                   </Slider>
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label fx:id="lbTimeSliderHours" text="00" />
+                        <Label text=":" />
+                        <Label fx:id="lbTimeSliderMinutes" text="00" />
+                        <Label text=":" />
+                        <Label fx:id="lbTimeSliderSeconds" text="00" />
+                     </children>
+                  </HBox>
                   <HBox alignment="CENTER" prefHeight="70.0" prefWidth="747.0" spacing="15.0">
                      <children>
                         <Button fx:id="btnShuffle" mnemonicParsing="false" onAction="#shuffleClick" />
@@ -35,7 +51,7 @@
                         <Button fx:id="btnSeekNext" mnemonicParsing="false" onAction="#seekNext" />
                         <Button fx:id="btnNext" mnemonicParsing="false" onAction="#nextClick" />
                         <Button fx:id="btnAudio" mnemonicParsing="false" onAction="#audioClick" />
-                        <Slider fx:id="audioSlider" prefHeight="14.0" prefWidth="101.0" />
+                        <Slider fx:id="volumeSlider" prefHeight="14.0" prefWidth="101.0" value="50.0" />
                      </children>
                   </HBox>
                </children>
@@ -53,7 +69,25 @@
                 </Menu>
                 <Menu mnemonicParsing="false" text="Tools">
                   <items>
-                    <MenuItem fx:id="miSpeed" mnemonicParsing="false" onAction="#speedClick" text="Set speed!" />
+                        <Menu fx:id="miSpeed" mnemonicParsing="false" text="Change Speed!">
+                          <items>
+                            <MenuItem mnemonicParsing="false" text="Slow">
+                                 <graphic>
+                                    <RadioButton fx:id="rbSlowSpeed" mnemonicParsing="false" onAction="#slowSpeedClick" />
+                                 </graphic>
+                              </MenuItem>
+                              <MenuItem mnemonicParsing="false" text="Normal">
+                                 <graphic>
+                                    <RadioButton fx:id="rbNormalSpeed" mnemonicParsing="false" onAction="#normalSpeedClick" />
+                                 </graphic>
+                              </MenuItem>
+                              <MenuItem mnemonicParsing="false" text="Fast">
+                                 <graphic>
+                                    <RadioButton fx:id="rbFastSpeed" mnemonicParsing="false" onAction="#fastSpeedClick" />
+                                 </graphic>
+                              </MenuItem>
+                          </items>
+                        </Menu>
                         <MenuItem fx:id="miBackground" mnemonicParsing="false" text="Change Background" />
                   </items>
                 </Menu>
@@ -68,8 +102,17 @@
          <center>
             <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <MediaView fx:id="mediaView" fitHeight="300.0" fitWidth="600.0" />
-                  <ListView prefHeight="334.0" prefWidth="240.0" />
+                  <MediaView fx:id="mediaView" fitHeight="338.0" fitWidth="600.0">
+                     <viewport>
+                        <Rectangle2D />
+                     </viewport></MediaView>
+                  <TableView prefHeight="314.0" prefWidth="241.0">
+                    <columns>
+                      <TableColumn prefWidth="73.0" text="Title" />
+                        <TableColumn prefWidth="77.0" text="Author" />
+                      <TableColumn prefWidth="88.0" text="Album" />
+                    </columns>
+                  </TableView>
                </children>
             </HBox>
          </center>
